- fixing iPhone 6 plus issue - fix background color issue

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 Bubble Ads/Bubble Ads.xcodeproj/xcuserdata/inova5.xcuserdatad/xcschemes/Bubble Ads.xcscheme
 Bubble Ads/Bubble Ads.xcodeproj/xcuserdata/inova5.xcuserdatad/xcschemes/xcschememanagement.plist
+Bubble Ads/Bubble Ads.xcodeproj/project.xcworkspace/xcuserdata/Muhamed-Hafez.xcuserdatad/xcdebugger/Expressions.xcexplist
+Bubble Ads/Bubble Ads.xcodeproj/xcuserdata/mohamedsaad.xcuserdatad/xcschemes/Bubble Ads.xcscheme
+Bubble Ads/Bubble Ads.xcodeproj/xcuserdata/mohamedsaad.xcuserdatad/xcschemes/xcschememanagement.plist
+Bubble Ads/Bubble Ads.xcodeproj/xcuserdata/Muhamed-Hafez.xcuserdatad/xcschemes/Bubble Ads.xcscheme
+Bubble Ads/Bubble Ads.xcodeproj/xcuserdata/Muhamed-Hafez.xcuserdatad/xcschemes/xcschememanagement.plist
